hover text on product list

--- a/productlist.html
+++ b/productlist.html
@@ -7,21 +7,70 @@
     <title>product list</title>
     <link rel="stylesheet" href="/css/style.css" />
   </head>
-  <body>
+  <body class="productList">
     <header>
       <nav>
         <ul>
           <li><a href="index.html">home</a></li>
-          <li><a href="#">categories</a></li>
+          <li><a href="category.html">categories</a></li>
         </ul>
       </nav>
     </header>
-    <main class="productList">
+    <main>
       <h1>NIKE</h1>
-      <article class="product">
-        <img src="/images/1163.webp" alt="Nike Football shirt" />
-        <h3>Nike Sahara Team India Fanwear Round Neck Jersey</h3>
-        <p>price</p>
+      <article class="productImage">
+        <a href="product.html">
+          <img src="/images/1163.webp" alt="Nike Football shirt" />
+          <div class="textOverlay">
+            <h3>Nike Sahara Team India Fanwear Round Neck Jersey</h3>
+            <p>price</p>
+          </div>
+        </a>
+      </article>
+      <article class="productImage">
+        <a href="product.html">
+          <img src="/images/1163.webp" alt="Nike Football shirt" />
+          <div class="textOverlay">
+            <h3>Nike Sahara Team India Fanwear Round Neck Jersey</h3>
+            <p>price</p>
+          </div>
+        </a>
+      </article>
+      <article class="productImage">
+        <a href="product.html">
+          <img src="/images/1163.webp" alt="Nike Football shirt" />
+          <div class="textOverlay">
+            <h3>Nike Sahara Team India Fanwear Round Neck Jersey</h3>
+            <p>price</p>
+          </div>
+        </a>
+      </article>
+      <article class="productImage">
+        <a href="product.html">
+          <img src="/images/1163.webp" alt="Nike Football shirt" />
+          <div class="textOverlay">
+            <h3>Nike Sahara Team India Fanwear Round Neck Jersey</h3>
+            <p>price</p>
+          </div>
+        </a>
+      </article>
+      <article class="productImage">
+        <a href="product.html">
+          <img src="/images/1163.webp" alt="Nike Football shirt" />
+          <div class="textOverlay">
+            <h3>Nike Sahara Team India Fanwear Round Neck Jersey</h3>
+            <p>price</p>
+          </div>
+        </a>
+      </article>
+      <article class="productImage">
+        <a href="product.html">
+          <img src="/images/1163.webp" alt="Nike Football shirt" />
+          <div class="textOverlay">
+            <h3>Nike Sahara Team India Fanwear Round Neck Jersey</h3>
+            <p>price</p>
+          </div>
+        </a>
       </article>
     </main>
     <footer></footer>
