product page - first commit

--- a/product.html
+++ b/product.html
@@ -16,7 +16,31 @@
         </ul>
       </nav>
     </header>
-    <main></main>
+    <main>
+      <div class="productPage">
+        <img src="/images/1163.webp" alt="Nike football shirt" />
+        <section class="infoBox">
+          <h3 class="title">Sahara Team India Fanwear Round Neck Jersey</h3>
+          <dl class="info">
+            <dt>Brand:</dt>
+            <dd>Nike</dd>
+            <dt>Colour:</dt>
+            <dd>Blue</dd>
+            <dt>Product ID:</dt>
+            <dd>1163</dd>
+          </dl>
+          <form>
+            <h4>Size:</h4>
+            <select name="size" id="size">
+              <option value="s">S</option>
+              <option value="m">M</option>
+              <option value="l">L</option>
+              <option value="xl">XL</option>
+            </select>
+            <button class="cartButton">ADD TO BASKET</button>
+          </form>
+      </div>
+    </main>
     <footer></footer>
   </body>
 </html>
