--- a/productlist.html
+++ b/productlist.html
@@ -22,8 +22,10 @@
         <a href="product.html">
           <img src="/images/1163.webp" alt="Nike Football shirt" />
           <div class="textOverlay">
-            <h3>Nike Sahara Team India Fanwear Round Neck Jersey</h3>
-            <p>price</p>
+            <h3 class="title">
+              Nike Sahara Team India Fanwear Round Neck Jersey
+            </h3>
+            <p class="price">price</p>
           </div>
         </a>
       </article>
