added discount and sold out

--- a/category.html
+++ b/category.html
@@ -17,24 +17,24 @@
       </nav>
     </header>
     <main>
-      <section class="brandsA">
-        <h2>A:</h2>
+      <section class="brands">
+        <h2>A</h2>
         <ol>
           <li><a href="productlist.html">artengo.</a></li>
           <li><a href="productlist.html">artengo.</a></li>
           <li><a href="productlist.html">artengo.</a></li>
         </ol>
       </section>
-      <section class="brandsB">
-        <h2>B:</h2>
+      <section class="brands">
+        <h2>B</h2>
         <ol>
           <li><a href="productlist.html">boss.</a></li>
           <li><a href="productlist.html">boss.</a></li>
           <li><a href="productlist.html">boss.</a></li>
         </ol>
       </section>
-      <section class="brandsC">
-        <h2>C:</h2>
+      <section class="brands">
+        <h2>C</h2>
         <ol>
           <li><a href="productlist.html">carhartt.</a></li>
           <li><a href="productlist.html">carhartt.</a></li>
