--- a/product.html
+++ b/product.html
@@ -12,7 +12,7 @@
       <nav>
         <ul>
           <li><a href="index.html">home</a></li>
-          <li><a href="#">categories</a></li>
+          <li><a href="category.html">categories</a></li>
         </ul>
       </nav>
     </header>
@@ -21,16 +21,17 @@
         <img src="/images/1163.webp" alt="Nike football shirt" />
         <section class="infoBox">
           <h3 class="title">Sahara Team India Fanwear Round Neck Jersey</h3>
+          <p class="price">DKK 895</p>
           <dl class="info">
-            <dt>Brand:</dt>
+            <dt>BRAND</dt>
             <dd>Nike</dd>
-            <dt>Colour:</dt>
+            <dt>COLOUR</dt>
             <dd>Blue</dd>
-            <dt>Product ID:</dt>
+            <dt>PRODUCT ID</dt>
             <dd>1163</dd>
           </dl>
           <form>
-            <h4>Size:</h4>
+            <h4>SIZE:</h4>
             <select name="size" id="size">
               <option value="s">S</option>
               <option value="m">M</option>
