--- a/productlist.html
+++ b/productlist.html
@@ -25,6 +25,35 @@
             <h3 class="title">
               Nike Sahara Team India Fanwear Round Neck Jersey
             </h3>
+            <p class="price">DKK 895</p>
+          </div>
+        </a>
+      </article>
+      <article class="productImage">
+        <a href="product.html">
+          <img
+            src="https://kea-alt-del.dk/t7/images/webp/640/1164.webp"
+            alt="Nike cricket top "
+          />
+          <div class="textOverlay">
+            <h3>Nike Sahara Team India Fanwear Round Neck Jersey</h3>
+            <p class="price discount">DKK 1595</p>
+            <div class="discountPrice">
+              <p>DKK 1148.4</p>
+              <p>28%</p>
+            </div>
+          </div>
+        </a>
+      </article>
+      <article class="productImage">
+        <a href="product.html">
+          <img
+            src="https://kea-alt-del.dk/t7/images/webp/640/1164.webp"
+            alt="Nike cricket top "
+          />
+          <p class="soldOut">SOLD OUT</p>
+          <div class="textOverlay">
+            <h3>Nike Sahara Team India Fanwear Round Neck Jersey</h3>
             <p class="price">price</p>
           </div>
         </a>
@@ -34,7 +63,7 @@
           <img src="/images/1163.webp" alt="Nike Football shirt" />
           <div class="textOverlay">
             <h3>Nike Sahara Team India Fanwear Round Neck Jersey</h3>
-            <p>price</p>
+            <p class="price">price</p>
           </div>
         </a>
       </article>
@@ -43,7 +72,7 @@
           <img src="/images/1163.webp" alt="Nike Football shirt" />
           <div class="textOverlay">
             <h3>Nike Sahara Team India Fanwear Round Neck Jersey</h3>
-            <p>price</p>
+            <p class="price">price</p>
           </div>
         </a>
       </article>
@@ -52,25 +81,7 @@
           <img src="/images/1163.webp" alt="Nike Football shirt" />
           <div class="textOverlay">
             <h3>Nike Sahara Team India Fanwear Round Neck Jersey</h3>
-            <p>price</p>
-          </div>
-        </a>
-      </article>
-      <article class="productImage">
-        <a href="product.html">
-          <img src="/images/1163.webp" alt="Nike Football shirt" />
-          <div class="textOverlay">
-            <h3>Nike Sahara Team India Fanwear Round Neck Jersey</h3>
-            <p>price</p>
-          </div>
-        </a>
-      </article>
-      <article class="productImage">
-        <a href="product.html">
-          <img src="/images/1163.webp" alt="Nike Football shirt" />
-          <div class="textOverlay">
-            <h3>Nike Sahara Team India Fanwear Round Neck Jersey</h3>
-            <p>price</p>
+            <p class="price">price</p>
           </div>
         </a>
       </article>
