js - making product page dynamic -  first commit

--- a/product.html
+++ b/product.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>product page</title>
+    <title class="productTitle">product page</title>
     <link rel="stylesheet" href="/css/style.css" />
   </head>
   <body>
@@ -22,7 +22,7 @@
         <section class="infoBox">
           <h3 class="title">Sahara Team India Fanwear Round Neck Jersey</h3>
           <p class="price">DKK 895</p>
-          <dl class="info">
+          <dl class="productInfo">
             <dt>BRAND</dt>
             <dd>Nike</dd>
             <dt>COLOUR</dt>
@@ -43,5 +43,6 @@
       </div>
     </main>
     <footer></footer>
+    <script src="product.js"></script>
   </body>
 </html>
