--- a/productlist.html
+++ b/productlist.html
@@ -18,18 +18,21 @@
     </header>
     <main>
       <h1>NIKE</h1>
-      <article class="productImage">
-        <a href="product.html">
-          <img src="/images/1163.webp" alt="Nike Football shirt" />
-          <div class="textOverlay">
-            <h3 class="title">
-              Nike Sahara Team India Fanwear Round Neck Jersey
-            </h3>
-            <p class="price">DKK 895</p>
-          </div>
-        </a>
-      </article>
-      <article class="productImage">
+      <template id="productImageTemplate">
+        <article class="productImage">
+          <a href="product.html">
+            <img src="/images/1163.webp" alt="Nike Football shirt" />
+            <div class="textOverlay">
+              <h3 class="title">
+                <div class="brand">Nike</div>
+                Sahara Team India Fanwear Round Neck Jersey
+              </h3>
+              <p class="price">DKK 895</p>
+            </div>
+          </a>
+        </article>
+      </template>
+      <!--<article class="productImage soldOut">
         <a href="product.html">
           <img
             src="https://kea-alt-del.dk/t7/images/webp/640/1164.webp"
@@ -51,7 +54,7 @@
             src="https://kea-alt-del.dk/t7/images/webp/640/1164.webp"
             alt="Nike cricket top "
           />
-          <p class="soldOut">SOLD OUT</p>
+          <p class=soldOutBox>SOLD OUT</p>
           <div class="textOverlay">
             <h3>Nike Sahara Team India Fanwear Round Neck Jersey</h3>
             <p class="price">price</p>
@@ -84,8 +87,9 @@
             <p class="price">price</p>
           </div>
         </a>
-      </article>
+      </article>-->
     </main>
     <footer></footer>
+    <script src="productlist.js"></script>
   </body>
 </html>
