fixed onSale and soldOut - rounded price, showing correct percentage etc

--- a/productlist.html
+++ b/productlist.html
@@ -28,6 +28,10 @@
                 Sahara Team India Fanwear Round Neck Jersey
               </h3>
               <p class="price">DKK 895</p>
+              <div class="discountPrice">
+                <p>DKK 1148.4</p>
+                <p>28%</p>
+              </div>
             </div>
           </a>
         </article>
