made productlist and productpage related to eachother, added discount on productpage

--- a/product.html
+++ b/product.html
@@ -18,10 +18,17 @@
     </header>
     <main>
       <div class="productPage">
-        <img src="/images/1163.webp" alt="Nike football shirt" />
+        <img
+          src="https://kea-alt-del.dk/t7/images/webp/640/1163.webp"
+          alt="Nike football shirt"
+        />
         <section class="infoBox">
           <h3 class="title">Sahara Team India Fanwear Round Neck Jersey</h3>
           <p class="price">DKK 895</p>
+          <div class="discountPrice">
+            <p>DKK 1148.4</p>
+            <p>28%</p>
+          </div>
           <dl class="productInfo">
             <dt>BRAND</dt>
             <dd>Nike</dd>
@@ -40,6 +47,7 @@
             </select>
             <button class="cartButton">ADD TO BASKET</button>
           </form>
+        </section>
       </div>
     </main>
     <footer></footer>
