--- a/productlist.html
+++ b/productlist.html
@@ -20,8 +20,11 @@
       <h1>NIKE</h1>
       <template id="productImageTemplate">
         <article class="productImage">
-          <a href="product.html">
-            <img src="/images/1163.webp" alt="Nike Football shirt" />
+          <a href="product.html?id=1531">
+            <img
+              src="https://kea-alt-del.dk/t7/images/webp/640/1163.webp"
+              alt="Nike Football shirt"
+            />
             <div class="textOverlay">
               <h3 class="title">
                 <div class="brand">Nike</div>
