product list category name added

--- a/productlist.html
+++ b/productlist.html
@@ -17,7 +17,7 @@
       </nav>
     </header>
     <main>
-      <h1>NIKE</h1>
+      <h1 class="categoryName">category</h1>
       <template id="productImageTemplate">
         <article class="productImage">
           <a href="product.html?id=1531">
