--- a/category.html
+++ b/category.html
@@ -12,7 +12,7 @@
       <nav>
         <ul>
           <li><a href="index.html">home</a></li>
-          <li><a href="#">categories</a></li>
+          <li><a href="category.html">categories</a></li>
         </ul>
       </nav>
     </header>
