--- a/category.html
+++ b/category.html
@@ -23,7 +23,7 @@
           <ol>
             <li>
               <a
-                href="productlist.html?products&category=footwear"
+                href="productlist.html?products&limit=30&category=footwear"
                 class="categoryName"
                 >artengo.</a
               >
