--- a/productlist.html
+++ b/productlist.html
@@ -5,7 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>product list</title>
-    <link rel="stylesheet" href="/css/style.css" />
+    <link rel="stylesheet" href="css/style.css" />
   </head>
   <body class="productList">
     <header>
@@ -20,7 +20,7 @@
       <h1 class="categoryName">category</h1>
       <template id="productImageTemplate">
         <article class="productImage">
-          <a href="product.html?id=1531">
+          <a href="product.html?id=">
             <img
               src="https://kea-alt-del.dk/t7/images/webp/640/1163.webp"
               alt="Nike Football shirt"
