--- a/category.html
+++ b/category.html
@@ -5,7 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>categories</title>
-    <link rel="stylesheet" href="/css/style.css" />
+    <link rel="stylesheet" href="css/style.css" />
   </head>
   <body class="categoryPage">
     <header>
@@ -23,7 +23,7 @@
           <ol>
             <li>
               <a
-                href="productlist.html?products&limit=30&category=footwear"
+                href="productlist.html?products&limit=30&category="
                 class="categoryName"
                 >artengo.</a
               >
